--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "@tailwindcss/forms": "^0.5.10",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -21,11 +22,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
-    "autoprefixer": "^10.4.19"
+    "typescript": "^5"
   }
 }
