--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tailwindcss/forms": "^0.5.10",
     "next": "14.2.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-icons": "^5.5.0",
+    "resend": "^6.4.2"
   },
   "devDependencies": {
     "@types/node": "^20",
