--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "resend": "^6.4.2"
   },
