--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "@tailwindcss/forms": "^0.5.10",
+    "framer-motion": "^12.23.24",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
